istio-project/argo-rollout/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: rollout-demo
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-canary
  namespace: rollout-demo
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
